--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CrudAppSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "CrudClients",
+    "Collection" :  "clients"
+  }
+
 }
